--- a/src/app/components/recepcion/green-card/green-card.component.html
+++ b/src/app/components/recepcion/green-card/green-card.component.html
@@ -1,12 +1,83 @@
-<div class="green-card-component">
-  <div class="container">
-    <div class="row mb-5 my-3 ml-2 mr-2">
-      <div class="col-lg-6">
-    
+<div class="card bg-light text-black m-2 pb-0">
+  <div class="card-header p-2">Historial Academico de Alumno</div>
+  <div class="card-body p-3">
+    <form (ngSubmit)="search()">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6">
+            <div class="form-group row">
+              <label for="nombre" class="col-form-label col-sm-4">Nombre</label>
+              <div class="col-sm-8">
+                <input type="text" class="form-control" [(ngModel)]="alumno.nombre" name="nombre" required>
+              </div>
+            </div>
+            <!--  -->
+            <div class="form-group row">
+              <label for="codigo" class="col-form-label col-sm-4">Matricula</label>
+              <div class="col-sm-8">
+                <input type="text" class="form-control" [(ngModel)]="alumno.codigo" name="codigo" readonly>
+              </div>
+            </div>
+            <!--  -->
+          </div>
+          <div class="col-sm-6">
+            <div class="form-group row">
+              <label for="nombre" class="col-form-label col-sm-4">Telefono</label>
+              <div class="col-sm-8">
+                <input type="text" class="form-control" [(ngModel)]="alumno.telefono" name="telefono" readonly>
+              </div>
+            </div>
+            <!--  -->
+            <div class="form-group row">
+              <label for="nombre" class="col-form-label col-sm-4">Celular</label>
+              <div class="col-sm-8">
+                <input type="text" class="form-control" [(ngModel)]="alumno.celular" name="celular" readonly>
+              </div>
+            </div>
+            <!--  -->
+          </div>
+        </div>
+        <div *ngIf="alumno.nombre != null" class="form-group row">
+            <div class="col-sm-12 d-flex justify-content-end">
+              <button class="btn btn-primary" role="button" >Buscar</button>
+            </div>
+          </div>
       </div>
-      <div class="col-lg-6">
-      
-    </div>
-    </div>
+    </form>
   </div>
 </div>
+<!-- --------------------------------------------------------------------------------------- -->
+<div class="container pl-1 pr-1">
+  <!-- style="height: 70vh;" -->
+    <div class="row justify-content-center">
+      <!-- Tabla a mostrar -->
+      <div class="col-sm-12">
+        <div class="card m-1">
+          <div class="card-header">
+            <button *ngIf="value" class="btn btn-primary">Insertar nuevo registro</button>
+          </div>
+          <div class="card-body bg-light text-primary">
+            <table class="table table-bordered table-striped" style="font-size: .8rem;">
+              <thead class="bg-primary" style="height: 5vh;">
+                <tr>
+                  <th>Level</th>
+                  <!-- <th>Comment</th> -->
+                  <th>Act</th>
+                  <th>Sign</th>
+                  <th>Hours</th>
+                </tr>
+              </thead>
+              <tbody *ngIf="value">
+                <tr class="text-center" *ngFor="let item of historial">
+                  <td class="py-1 pb-0">{{ item.nivel }}</td>
+                  <td class="py-1 pb-0">{{ item.tutoria }}</td>
+                  <td class="py-1 pb-0">{{ item.aprobado }}</td>
+                  <td class="py-1 pb-0">{{ item.horas }}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
