--- a/src/app/components/recepcion/reserva/reserva.component.html
+++ b/src/app/components/recepcion/reserva/reserva.component.html
@@ -1,1 +1,28 @@
-<h1>Hola bebe whatsapeame</h1>
+<nav class="navbar navbar-expand-lg navbar-light bg-primary ml-1">
+  <!-- <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button> -->
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav d-flex justify-content-between">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Lunes</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Martes</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Miercoles</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Jueves</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Viernes</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Sabado</a>
+      </li>
+    </ul>
+  </div>
+</nav>
