--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,16 @@
   <app-login (usuarioLogeado)="setLogeado($event)" *ngIf="getLoginStatus()"></app-login>
 
   <div *ngIf="!getLoginStatus()">
-    <app-main></app-main>
+    <div class="container-fluid pl-0">
+      <div class="row">
+        <div class="col-md-2 pr-0">
+          <app-panel></app-panel>
+        </div>
+        <div class="col-md-10 pl-0 pr-0">
+          <!-- Ingresar componentes a mostrar -->
+          <router-outlet></router-outlet>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
