--- a/src/app/components/recepcion/reserva/reserva.component.html
+++ b/src/app/components/recepcion/reserva/reserva.component.html
@@ -1,28 +1,50 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-primary ml-1">
-  <!-- <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button> -->
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav d-flex justify-content-between">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Lunes</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Martes</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Miercoles</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Jueves</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Viernes</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Sabado</a>
-      </li>
-    </ul>
+<!-- <div class="container-fluid pl-0">
+  <div class="row">
+    <div class="col-md-12 pl-3 pr-0">
+      <nav class="navbar navbar-expand-lg navbar-light bg-primary ml-1">
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav d-flex justify-content-between">
+            <li class="nav-item active" routerLinkActive="active">
+              <a class="nav-link" href="#" routerLink="lunes">Lunes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Martes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Miercoles</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Jueves</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Viernes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Sabado</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </div>
-</nav>
+</div> -->
+<div class="container py-5">
+  <div class="row d-flex flex-row justify-content-center align-item-center">
+    <div class="col-md-4">
+        <app-card></app-card>
+    </div>
+    <div class="col-md-4">
+        <app-card></app-card>
+    </div>
+    <div class="col-md-4">
+        <app-card></app-card>
+    </div>
+  </div>
+</div>
+<div class="container-fluid pl-0">
+  <div class="row">
+    <div class="col-md-12">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
