--- a/src/app/components/recepcion/reserva/reserva.component.html
+++ b/src/app/components/recepcion/reserva/reserva.component.html
@@ -1,4 +1,41 @@
-
+<div class="container-fluid pl-0">
+  <div class="row">
+    <div class="col-md-12 pl-3 pr-0">
+      <nav class="navbar navbar-expand-lg navbar-light bg-primary ml-1 justify-content-between">
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav d-flex justify-content-between">
+            <li class="nav-item active" routerLinkActive="active">
+              <a class="nav-link" href="#" routerLink="lunes">Lunes</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+              <a class="nav-link" href="#" routerLink="martes">Martes</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+              <a class="nav-link" href="#" routerLink="miercoles">Miercoles</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+              <a class="nav-link" href="#" routerLink="jueves">Jueves</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+              <a class="nav-link" href="#" routerLink="viernes">Viernes</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+              <a class="nav-link" href="#" routerLink="sabado">Sabado</a>
+            </li>
+          </ul>
+        </div>
+        <div class="m-0 p-0">
+            <label class="nav-item pr-2">Dia: </label>
+            <mat-form-field>
+              <input matInput [matDatepicker]="picker">
+              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
+        </div>
+      </nav>
+    </div>
+  </div>
+</div>
 <div class="container-fluid pl-0">
   <div class="row">
     <div class="col-md-12">
