Agregando funcionalidad y llamando los servicios que usara el componente registro

--- a/src/app/components/panel/panel.component.html
+++ b/src/app/components/panel/panel.component.html
@@ -57,7 +57,7 @@
       </ul>
     </div>
     <!-- Seccion Administrador -->
-    <div class="administracion" *ngIf="true">
+    <div class="administracion" *ngIf="false">
       <ul class="nav flex-column align-items-center">
         <div class="container pl-0 pr-0">
           <hr style="background-color: white; margin: 15px -15px;">
