--- a/src/app/components/recepcion/green-card/green-card.component.html
+++ b/src/app/components/recepcion/green-card/green-card.component.html
@@ -8,14 +8,14 @@
             <div class="form-group row">
               <label for="nombre" class="col-form-label col-sm-4">Nombre</label>
               <div class="col-sm-8">
-                <input type="text" class="form-control" [(ngModel)]="alumno.nombre" name="nombre" required>
+                <input type="text" class="form-control" [(ngModel)]="alumnoPersona.nombre" name="nombre" required>
               </div>
             </div>
             <!--  -->
             <div class="form-group row">
               <label for="codigo" class="col-form-label col-sm-4">Matricula</label>
               <div class="col-sm-8">
-                <input type="text" class="form-control" [(ngModel)]="alumno.codigo" name="codigo" readonly>
+                <input type="text" class="form-control" [(ngModel)]="alumno.id" name="codigo" readonly>
               </div>
             </div>
             <!--  -->
@@ -24,14 +24,14 @@
             <div class="form-group row">
               <label for="nombre" class="col-form-label col-sm-4">Telefono</label>
               <div class="col-sm-8">
-                <input type="text" class="form-control" [(ngModel)]="alumno.telefono" name="telefono" readonly>
+                <input type="text" class="form-control" [(ngModel)]="alumnoTelefono.telefono" name="telefono" readonly>
               </div>
             </div>
             <!--  -->
             <div class="form-group row">
               <label for="nombre" class="col-form-label col-sm-4">Celular</label>
               <div class="col-sm-8">
-                <input type="text" class="form-control" [(ngModel)]="alumno.celular" name="celular" readonly>
+                <input type="text" class="form-control" [(ngModel)]="alumnoTelefono.telefono" name="celular" readonly>
               </div>
             </div>
             <!--  -->
