--- a/src/app/components/recepcion/registro/registro.component.css
+++ b/src/app/components/recepcion/registro/registro.component.css
@@ -1,5 +1,5 @@
 input{
-    color: blue;
+    color: black;
     width: 100%;
     margin-top: 3px;
     margin-right: 2px;
@@ -14,9 +14,9 @@ input{
     border-bottom: solid 1px rgba(0,0,255,0.4);
 } */
 
-input:hover {
+/* input:hover {
     border-bottom: solid 2px rgba(0,0,255,0.4);
-}
+} */
 
 textarea{
     color: blue;
