Finalizando el modulo de registro de Matricula

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
         <div class="col-md-2 pr-0">
           <app-panel></app-panel>
         </div>
-        <div class="col-md-10 pl-0 pr-0">
+        <div class="col-md-10 pl-0 pr-0 bg-light">
           <!-- Ingresar componentes a mostrar -->
           <router-outlet></router-outlet>
         </div>
