--- a/src/app/components/recepcion/registro/registro.component.css
+++ b/src/app/components/recepcion/registro/registro.component.css
@@ -1,3 +1,7 @@
+#codigoMatricula{
+    background: none;
+}
+
 input{
     color: black;
     width: 100%;
@@ -9,14 +13,6 @@ input{
     border-right: none;  
     /* border-bottom: solid 2px wheat !important; */
 }
-
-/* input:active {
-    border-bottom: solid 1px rgba(0,0,255,0.4);
-} */
-
-/* input:hover {
-    border-bottom: solid 2px rgba(0,0,255,0.4);
-} */
 
 textarea{
     color: blue;
