Agregando Lista de reservas disponibles para proceder a reservar

--- a/src/app/components/panel/panel.component.html
+++ b/src/app/components/panel/panel.component.html
@@ -35,7 +35,7 @@
           </div>
         </li>
         <!--  -->
-        <li class="nav-item">
+        <li *ngIf="false" class="nav-item">
           <div class="container">
             <div class="row justify-content-center" routerLinkActive="active">
               <a class="nav-link" href="#" routerLink="/historial">
@@ -50,6 +50,15 @@
             <div class="row justify-content-center" routerLinkActive="active">
               <a class="nav-link" href="#" routerLink="/record">
                 <p class="text-light" style="font-size: .8rem">Record de Produccion</p>
+              </a>
+            </div>
+          </div>
+        </li>
+        <li class="nav-item">
+          <div class="container">
+            <div class="row justify-content-center" routerLinkActive="active">
+              <a class="nav-link" href="#" routerLink="/lista">
+                <p class="text-light" style="font-size: .8rem">Lista de Clientes</p>
               </a>
             </div>
           </div>
