--- a/src/app/components/recepcion/green-card/green-card.component.html
+++ b/src/app/components/recepcion/green-card/green-card.component.html
@@ -1,54 +1,56 @@
-<div class="card bg-light text-black m-2 pb-0">
-  <div class="card-header p-2">Historial Academico de Alumno</div>
-  <div class="card-body p-3">
-    <form (ngSubmit)="search()">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-6">
-            <div class="form-group row">
-              <label for="nombre" class="col-form-label col-sm-4">Nombre</label>
-              <div class="col-sm-8">
-                <input type="text" class="form-control" [(ngModel)]="alumnoPersona.nombre" name="nombre" required>
+<div style="height: 100vh;">
+  <div class="card bg-light text-black m-2 pb-0">
+    <div class="card-header p-2">Historial Academico de Alumno</div>
+    <div class="card-body p-3">
+      <form (ngSubmit)="search()">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="form-group row">
+                <label for="nombre" class="col-form-label col-sm-4">Nombre</label>
+                <div class="col-sm-8">
+                  <input type="text" class="form-control" [(ngModel)]="alumnoPersona.nombre" name="nombre" required>
+                </div>
               </div>
-            </div>
-            <!--  -->
-            <div class="form-group row">
-              <label for="codigo" class="col-form-label col-sm-4">Matricula</label>
-              <div class="col-sm-8">
-                <input type="text" class="form-control" [(ngModel)]="alumno.id" name="codigo" readonly>
+              <!--  -->
+              <div class="form-group row">
+                <label for="codigo" class="col-form-label col-sm-4">Matricula</label>
+                <div class="col-sm-8">
+                  <input type="text" class="form-control" [(ngModel)]="alumno.id" name="codigo" readonly>
+                </div>
               </div>
+              <!--  -->
             </div>
-            <!--  -->
+            <div class="col-sm-6">
+              <div class="form-group row">
+                <label for="nombre" class="col-form-label col-sm-4">Telefono</label>
+                <div class="col-sm-8">
+                  <input type="text" class="form-control" [(ngModel)]="alumnoTelefono.telefono" name="telefono"
+                    readonly>
+                </div>
+              </div>
+              <!--  -->
+              <div class="form-group row">
+                <label for="nombre" class="col-form-label col-sm-4">Correo</label>
+                <div class="col-sm-8">
+                  <input type="text" class="form-control" [(ngModel)]="alumnoCorreo.correo" name="correo" readonly>
+                </div>
+              </div>
+              <!--  -->
+            </div>
           </div>
-          <div class="col-sm-6">
-            <div class="form-group row">
-              <label for="nombre" class="col-form-label col-sm-4">Telefono</label>
-              <div class="col-sm-8">
-                <input type="text" class="form-control" [(ngModel)]="alumnoTelefono.telefono" name="telefono" readonly>
-              </div>
-            </div>
-            <!--  -->
-            <div class="form-group row">
-              <label for="nombre" class="col-form-label col-sm-4">Celular</label>
-              <div class="col-sm-8">
-                <input type="text" class="form-control" [(ngModel)]="alumnoTelefono.telefono" name="celular" readonly>
-              </div>
-            </div>
-            <!--  -->
+          <div *ngIf="alumnoPersona.nombre != null && this.alumnoPersona.nombre.length > 0" class="form-group row">
+                <div class="col-sm-12 d-flex justify-content-end">
+                    <button class="btn btn-primary" role="button">Buscar</button>
+                  </div>
           </div>
         </div>
-        <div *ngIf="alumno.nombre != null" class="form-group row">
-            <div class="col-sm-12 d-flex justify-content-end">
-              <button class="btn btn-primary" role="button" >Buscar</button>
-            </div>
-          </div>
-      </div>
-    </form>
+      </form>
+    </div>
   </div>
-</div>
-<!-- --------------------------------------------------------------------------------------- -->
-<div class="container pl-1 pr-1">
-  <!-- style="height: 70vh;" -->
+  <!-- --------------------------------------------------------------------------------------- -->
+  <div class="container pl-1 pr-1">
+    <!-- style="height: 70vh;" -->
     <div class="row justify-content-center">
       <!-- Tabla a mostrar -->
       <div class="col-sm-12">
@@ -81,3 +83,4 @@
       </div>
     </div>
   </div>
+</div>
