--- a/src/app/components/recepcion/reserva/reserva.component.html
+++ b/src/app/components/recepcion/reserva/reserva.component.html
@@ -1,31 +1,77 @@
-<div class="container-fluid pl-0">
-  <div class="row">
-    <div class="col-md-12 pl-3 pr-0">
-      <nav class="navbar navbar-expand-lg navbar-light bg-primary ml-1 justify-content-between">
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav d-flex justify-content-between">
-            <li class="nav-item active" routerLinkActive="active">
-              <a class="nav-link" href="#" routerLink="lunes">Lunes</a>
-            </li>
-            <li class="nav-item" routerLinkActive="active">
-              <a class="nav-link" href="#" routerLink="martes">Martes</a>
-            </li>
-            <li class="nav-item" routerLinkActive="active">
-              <a class="nav-link" href="#" routerLink="miercoles">Miercoles</a>
-            </li>
-            <li class="nav-item" routerLinkActive="active">
-              <a class="nav-link" href="#" routerLink="jueves">Jueves</a>
-            </li>
-            <li class="nav-item" routerLinkActive="active">
-              <a class="nav-link" href="#" routerLink="viernes">Viernes</a>
-            </li>
-            <li class="nav-item" routerLinkActive="active">
-              <a class="nav-link" href="#" routerLink="sabado">Sabado</a>
-            </li>
-          </ul>
-        </div>
-        <div class="m-0 p-0 d-flex flex-row">
-            <!-- <label class="nav-item pr-2">Dia: </label> -->
+<div style="height: 100vh;">
+  <div class="card border-primary mb-3 my-3">
+    <div class="card-header">Listado de Titulares</div>
+    <div class="card-body text-primary">
+      <!-- <h5 class="card-title">Listado de Titulares</h5> -->
+  
+      <table class="table table-bordered table-striped">
+        <thead>
+            <tr>
+              <th>Id</th>
+              <th>Fecha</th>
+              <th>Hora</th>
+              <th>Nivel</th>
+              <th>Unidad</th>
+              <th>Tutoria</th>
+              <th>Tutor</th>
+              <!-- <th>Reservas</th> -->
+              <!-- <th>Eliminar</th> -->
+            </tr>
+        </thead>
+        <tbody>
+          <tr style="font-size: 14px;" *ngFor="let item of reservas">
+            <td>{{ item.id }}</td>
+            <td>{{ item.fecha }}</td>
+            <td>{{ item.hora }}</td>
+            <td>{{ item.nivel }}</td>
+            <td>{{ item.unidad }}</td>
+            <td>{{ item.tutoria }}</td>
+            <td>{{ item.tutor }}</td>
+            <!-- <td>
+              <button type="button" name="edit" class="btn btn-primary btn-sm" [routerLink]="['/reservas/form',item.id]" routerLinkActive="router-link-active" >Reservas</button>
+            </td> -->
+            <!-- <td>
+              <button type="button" name="delete" (click)='delete(titular)' class="ml-1 btn btn-danger btn-sm">Delete</button>
+            </td> -->
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+<!-- 
+  <div class="container-fluid pl-0">
+    <div class="row">
+      <div class="col-md-12 pl-2 ml-0 pr-0">
+        <nav class="navbar navbar-expand-lg navbar-light bg-primary ml-1 justify-content-between">
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav d-flex justify-content-between">
+              <li class="nav-item active" routerLinkActive="active">
+                <a class="nav-link" href="#" routerLink="lunes">Lunes</a>
+              </li>
+              <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" href="#" routerLink="martes">Martes</a>
+              </li>
+              <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" href="#" routerLink="miercoles">Miercoles</a>
+              </li>
+              <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" href="#" routerLink="jueves">Jueves</a>
+              </li>
+              <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" href="#" routerLink="viernes">Viernes</a>
+              </li>
+              <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" href="#" routerLink="sabado">Sabado</a>
+              </li>
+            </ul>
+          </div>
+          <div class="m-0 p-0 d-flex flex-row">
             <div class="p-0 m-0">
               <mat-form-field>
                 <input matInput [matDatepicker]="picker">
@@ -33,15 +79,16 @@
                 <mat-datepicker #picker></mat-datepicker>
               </mat-form-field>
             </div>
-        </div>
-      </nav>
+          </div>
+        </nav>
+      </div>
     </div>
   </div>
-</div>
-<div class="container-fluid pl-0">
-  <div class="row">
-    <div class="col-md-12">
-      <router-outlet></router-outlet>
+  <div class="container-fluid pl-0">
+    <div class="row">
+      <div class="col-md-12">
+        <router-outlet></router-outlet>
+      </div>
     </div>
   </div>
-</div>
+ -->
